[gd_scene load_steps=6 format=3 uid="uid://dttx53vhtgwy1"]

[ext_resource type="Script" path="res://ui/components/level_info.gd" id="1_dbdb1"]
[ext_resource type="PackedScene" uid="uid://swjkfmyam37c" path="res://simulation/simulation.tscn" id="2_6gbl3"]
[ext_resource type="PackedScene" uid="uid://bbinj3e4ms0sl" path="res://ui/components/input_node.tscn" id="3_ak1m1"]
[ext_resource type="PackedScene" uid="uid://dumop2qw31tk5" path="res://ui/components/output_node.tscn" id="4_b1ryx"]
[ext_resource type="FontFile" uid="uid://d3ya2ni4d4nbf" path="res://assets/UI/font/Static/Shantell_Sans-Normal-Bold.otf" id="5_xk1bm"]

[node name="LevelInfo" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 288.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbdb1")
simulation_scene = ExtResource("2_6gbl3")
input_node = ExtResource("3_ak1m1")
output_node = ExtResource("4_b1ryx")
metadata/_edit_lock_ = true

[node name="LevelTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 29.5
offset_right = 450.0
offset_bottom = 70.5
theme_override_fonts/font = ExtResource("5_xk1bm")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="LevelDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 75.0
offset_right = 450.0
offset_bottom = 211.0
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(320, 296)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -156.5
offset_right = -56.0
offset_bottom = 139.5
grow_horizontal = 0
grow_vertical = 2

[node name="TruthTable" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 421.0
offset_right = 841.0
offset_bottom = 503.0
text = "Play"

[node name="InputVariables" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 216.5
offset_right = 156.0
offset_bottom = 457.5

[node name="OutputVariables" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 222.5
offset_right = 384.0
offset_bottom = 470.5

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_top = 15.0
offset_right = -18.0
offset_bottom = 88.0
grow_horizontal = 0
text = "X"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
